remove protocol in elastic host configuration

--- a/fluentd.conf
+++ b/fluentd.conf
@@ -389,7 +389,7 @@
 <match jfrog.**>
   @type elasticsearch
   @id elasticsearch
-  host http://elasticsearch-master.monitoring/
+  host elasticsearch-master.monitoring
   port 9200
   user my_user
   password my_password
